# bazel-rust-guided-experiment

./: .gitignore  README.md  book.toml
book/: index.md  stage-1.md  stage-2.md  stage-3.md
book/stage-0/: index.md
book/stage-2-crates-vendor/: index.md
book/stage-3-upgrade-version/: index.md
src/: README.md  SUMMARY.md  stage-0.md  stage-1.md  stage-2.md  stage-3.md
src/stage-0/: README.md
src/stage-1-bazel-from-rules-rust-example/: .workspace1.bazel  .workspace2.bazel  README.md
src/stage-1-bazel-from-rules-rust-example/backend/: .build1.bazel  Cargo.toml
src/stage-2-crates-vendor/: README.md  index.html
src/stage-2-crates-vendor/backend/: .build1.bazel  .build2.bazel  .build3.bazel
src/stage-2-verify/: README.md
src/stage-3-upgrade-version/: Cargo.toml  README.md  WORKSPACE.bazel
src/stage-3-upgrade-version/backend/: .Cargo1.toml  .build1.bazel  BUILD.bazel  Cargo.toml
src/stage-3-upgrade-version/backend/math/: .build1.bazel  BUILD.bazel  Cargo.toml
src/stage-3-upgrade-version/backend/math/src/: lib.rs
src/stage-3-upgrade-version/backend/server/: BUILD.bazel
src/stage-3-upgrade-version/backend/src/: main.rs
stage-0/: README.md
stage-2-crates-vendor/: README.md  WORKSPACE.bazel
stage-2-crates-vendor/.cargo/: config.toml
stage-2-crates-vendor/backend/: BUILD.bazel
stage-2-newly-vendored/: README.md
stage-2-newly-vendored/backend/: BUILD.bazel
stage-2-verify/: WORKSPACE.bazel
stage-2-verify/backend/: BUILD.bazel
stage-3-upgrade-version/: Cargo.toml
stage-3-upgrade-version/backend/: Cargo.toml
