[package]
name = "example-readme"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
math = { path = "./math" }

axum = { version = "0.5.5" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "=1.16.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
